welcome.lessons.welcome.summative.Moria.scala.code
def Moria () {
  while (!(estFaceMur() && (getDirection():Direction)==Direction.EAST)) {
    avance()
    if(estSurBiscuit()) {
      prendBiscuit()
      retourne()
      while (!estSurBiscuit() || estFaceMur() ){
        avance()}
      retourne()
      avance()
      poseBiscuit()}
    if (estSurBiscuit()) {
      prendBiscuit()
      retourne()
      while (!estSurBiscuit) {
        avance()}
      retourne()
      avance()
      poseBiscuit()}}
  
  droite()
  avance()
  gauche()
  avance()
}
Moria()